--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,86 +1,93 @@
 <!-- start custom footer snippets -->
 <div class="jcem-foot">
-  <p>
-    <b>Importante:</b> Ao acessar este e qualquer domínio e/ou subdomínio de
-    <b>jeancarloem.com</b>, você concorda, de forma
-    <b>irretratável e irrevogável</b>, com os
-    <a
-      href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/termos-e-condicoes-de-uso"
-      ><b>Termos e Políticas de Uso</b></a
-    >, declarando-se ciente de que, caso <b><i>não</i></b> os aceite ou
-    concorde, <b><u>NÃO</u></b> deverá usar, acessar, salvar (ou armazenar em quaisquer meios),
-    compartilhar e/ou replicar (mesmo que parcialmente) qualquer site, blog ou
-    informação de <b>jeancarloem.com</b> (e seus subdomínios), devendo ainda
-    <b>abandonar (sair) imediata e impreterivelmente</b> de qualquer domínio ou
-    subdomínio de <b>jeancarloem.com</b>.
-  </p>
+	<p>
+		<b>Importante:</b> Ao acessar este e qualquer domínio e/ou
+		subdomínio de <b>jeancarloem.com</b>, você concorda, de forma
+		<b>irretratável e irrevogável</b>, com os
+		<a
+			href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/termos-e-condicoes-de-uso"
+			><b>Termos e Políticas de Uso</b></a
+		>, declarando-se ciente de que, caso <b><i>não</i></b> os aceite
+		ou concorde, <b><u>NÃO</u></b> deverá usar, acessar, salvar (ou
+		armazenar em quaisquer meios), compartilhar e/ou replicar (mesmo
+		que parcialmente) qualquer site, blog ou informação de
+		<b>jeancarloem.com</b> (e seus subdomínios), devendo ainda
+		<b>abandonar (sair) imediata e impreterivelmente</b> de qualquer
+		domínio ou subdomínio de <b>jeancarloem.com</b>.
+	</p>
 
-  <p>
-    <b>AVISO DE CONTEÚDO:</b> Este e qualquer site de <b>jeancarloem.com</b> e
-    seus subdomínios podem conter
-    <b
-      >informações, opiniões pessoais, sugestões, dicas, orientações,
-      propagandas, patrocínios explícitos e implícitos</b
-    >, entre outros conteúdos. Tais materiais são de
-    <b>responsabilidade exclusiva do autor</b> e <b><i>não</i></b> implicam em
-    concordância e/ou endosso por parte deste(s) site(s) ou de seu(s)
-    proprietário(s). O conteúdo é fornecido pelo autor e disponibilizado “<i
-      >como está</i
-    >”, sem quaisquer garantias implícitas e/ou explícitas, diretas e/ou
-    indiretas, nos termos da
-    <a
-      href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/licenca"
-      ><b>licença</b></a
-    >. Pode conter ainda teor
-    <b>polêmico, religioso, filosófico ou político</b>, entre outros, que podem
-    ser considerados <b>inapropriados e até ofensivos</b>, a depender da
-    cultura, crença ou localidade. Todavia, tais conteúdos se inserem
-    <b>estritamente no escopo de ideias, conceitos e abstrações</b>,
-    <b
-      ><i
-        >NÃO configurando, sob qualquer hipótese, incentivo, promoção ou
-        apologia ao ódio, discriminação, violação de leis, agressão,
-        desrespeito, racismo ou condutas análogas</i
-      ></b
-    >. Caso algum texto leve o leitor a interpretar de modo diverso, fica desde
-    já esclarecido que <b><i>tal nunca foi a intenção</i></b
-    >, devendo eventual interpretação ser revista à luz deste esclarecimento. O
-    leitor poderá, se desejar, comunicar-se especificando precisamente o
-    <b>trecho, termos ou combinações de palavras</b> que possam ter ocasionado
-    má compreensão, ciente de que, dentro do contexto de ideias,
-    <b
-      >opiniões divergentes podem naturalmente gerar desconforto ou ofensa a
-      valores pessoais</b
-    >
-    — o que é
-    <i>inerente ao exercício do debate e da liberdade de expressão</i>. Tais
-    manifestações são resguardadas pelo <b>direito à livre expressão</b>,
-    garantido pela
-    <a
-      href="https://web.archive.org/web/20230209192120/http://www.senado.leg.br/atividade/const/con1988/con1988_15.12.2016/art_5_.asp"
-      target="_blank"
-      rel="noopener"
-      ><b>Constituição Federal do Brasil</b>, em seu artigo 5º, incisos IV, VI,
-      VIII e IX</a
-    >, que legisla sobre a
-    <b>liberdade de pensamento, religião e comunicação</b>, independentemente de
-    censura ou licença, bem como pela
-    <a
-      href="https://web.archive.org/web/20230209192120/http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm"
-      target="_blank"
-      rel="noopener"
-      ><b>Lei Geral de Proteção de Dados Pessoais</b>, artigo 2º, inciso III</a
-    >.
-  </p>
+	<p>
+		<b>AVISO DE CONTEÚDO:</b> Este e qualquer site de
+		<b>jeancarloem.com</b> e seus subdomínios podem conter
+		<b
+			>informações, opiniões pessoais, sugestões, dicas, orientações,
+			propagandas, patrocínios explícitos e implícitos</b
+		>, entre outros conteúdos. Tais materiais são de
+		<b>responsabilidade exclusiva do autor</b> e
+		<b><i>não</i></b> implicam em concordância e/ou endosso por parte
+		deste(s) site(s) ou de seu(s) proprietário(s). O conteúdo é
+		fornecido pelo autor e disponibilizado “<i>como está</i>”, sem
+		quaisquer garantias implícitas e/ou explícitas, diretas e/ou
+		indiretas, nos termos da
+		<a
+			href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/licenca"
+			><b>licença</b></a
+		>. Pode conter ainda teor
+		<b>polêmico, religioso, filosófico ou político</b>, entre outros,
+		que podem ser considerados <b>inapropriados e até ofensivos</b>, a
+		depender da cultura, crença ou localidade. Todavia, tais conteúdos
+		se inserem
+		<b>estritamente no escopo de ideias, conceitos e abstrações</b>,
+		<b
+			><i
+				>NÃO configurando, sob qualquer hipótese, incentivo, promoção
+				ou apologia ao ódio, discriminação, violação de leis,
+				agressão, desrespeito, racismo ou condutas análogas</i
+			></b
+		>. Caso algum texto leve o leitor a interpretar de modo diverso,
+		fica desde já esclarecido que
+		<b><i>tal nunca foi a intenção</i></b
+		>, devendo eventual interpretação ser revista à luz deste
+		esclarecimento. O leitor poderá, se desejar, comunicar-se
+		especificando precisamente o
+		<b>trecho, termos ou combinações de palavras</b> que possam ter
+		ocasionado má compreensão, ciente de que, dentro do contexto de
+		ideias,
+		<b
+			>opiniões divergentes podem naturalmente gerar desconforto ou
+			ofensa a valores pessoais</b
+		>
+		— o que é
+		<i>inerente ao exercício do debate e da liberdade de expressão</i
+		>. Tais manifestações são resguardadas pelo
+		<b>direito à livre expressão</b>, garantido pela
+		<a
+			href="https://web.archive.org/web/20230209192120/http://www.senado.leg.br/atividade/const/con1988/con1988_15.12.2016/art_5_.asp"
+			target="_blank"
+			rel="noopener"
+			><b>Constituição Federal do Brasil</b>, em seu artigo 5º,
+			incisos IV, VI, VIII e IX</a
+		>, que legisla sobre a
+		<b>liberdade de pensamento, religião e comunicação</b>,
+		independentemente de censura ou licença, bem como pela
+		<a
+			href="https://web.archive.org/web/20230209192120/http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm"
+			target="_blank"
+			rel="noopener"
+			><b>Lei Geral de Proteção de Dados Pessoais</b>, artigo 2º,
+			inciso III</a
+		>.
+	</p>
 
-  <p>
-    <b>ATENÇÃO:</b> É expressamente <b><u>PROIBIDO</u></b> visualizar, acessar,
-    usar, compartilhar, distribuir ou permanecer neste site sem antes concordar
-    com <b><u>TODOS</u></b> os
-    <a
-      href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/termos-e-condicoes-de-uso"
-      ><b>Termos e Políticas de Uso</b></a
-    >!
-  </p>
+	<p>
+		<b>ATENÇÃO:</b> É expressamente <b><u>PROIBIDO</u></b> visualizar,
+		acessar, usar, compartilhar, distribuir ou permanecer neste site
+		sem antes concordar com <b><u>TODOS</u></b> os
+		<a
+			href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/termos-e-condicoes-de-uso"
+			><b>Termos e Políticas de Uso</b></a
+		>
+		e AVISO DE CONTEÚDO acima!
+	</p>
 </div>
 <!-- end custom footer snippets -->
