--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -7,7 +7,7 @@
 		<a
 			href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/termos-e-condicoes-de-uso"
 			><b>Termos e Políticas de Uso</b></a
-		>, declarando-se ciente de que, caso <b><i>não</i></b> os aceite
+		>, declarando-se ciente de que, caso <b>não</b> os aceite
 		ou concorde, <b><u>NÃO</u></b> deverá usar, acessar, salvar (ou
 		armazenar em quaisquer meios), compartilhar e/ou replicar (mesmo
 		que parcialmente) qualquer site, blog ou informação de
@@ -24,9 +24,9 @@
 			propagandas, patrocínios explícitos e implícitos</b
 		>, entre outros conteúdos. Tais materiais são de
 		<b>responsabilidade exclusiva do autor</b> e
-		<b><i>não</i></b> implicam em concordância e/ou endosso por parte
+		<b>não</b> implicam em concordância e/ou endosso por parte
 		deste(s) site(s) ou de seu(s) proprietário(s). O conteúdo é
-		fornecido pelo autor e disponibilizado “<i>como está</i>”, sem
+		fornecido pelo autor e disponibilizado “como está”, sem
 		quaisquer garantias implícitas e/ou explícitas, diretas e/ou
 		indiretas, nos termos da
 		<a
@@ -46,7 +46,7 @@
 			></b
 		>. Caso algum texto leve o leitor a interpretar de modo diverso,
 		fica desde já esclarecido que
-		<b><i>tal nunca foi a intenção</i></b
+		<b>tal nunca foi a intenção</b
 		>, devendo eventual interpretação ser revista à luz deste
 		esclarecimento. O leitor poderá, se desejar, comunicar-se
 		especificando precisamente o
@@ -58,7 +58,7 @@
 			ofensa a valores pessoais</b
 		>
 		— o que é
-		<i>inerente ao exercício do debate e da liberdade de expressão</i
+		inerente ao exercício do debate e da liberdade de expressão</i
 		>. Tais manifestações são resguardadas pelo
 		<b>direito à livre expressão</b>, garantido pela
 		<a
