ajustes  visuais, diversas no tema

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,5 +6,5 @@ search: false
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@import "minimal-mistakes"; // main partials
-@import "../../persona-jcem/css/main.scss"
+@import 'minimal-mistakes'; // main partials
+@import '../../persona-jcem/css/jcmain.scss';
