--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,16 +1,19 @@
-<!-- Custom icons for all platforms -->
 <link
 	rel="icon"
 	type="image/png"
-	href="/favicon-96x96.png"
+	href="https://jcem.pro/logo/favicon-96x96.png"
 	sizes="96x96"
 />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
+<link
+	rel="icon"
+	type="image/svg+xml"
+	href="https://jcem.pro/logo/favicon.svg"
+/>
+<link rel="shortcut icon" href="https://jcem.pro/logo/favicon.ico" />
 <link
 	rel="apple-touch-icon"
 	sizes="180x180"
-	href="/apple-touch-icon.png"
+	href="https://jcem.pro/logo/apple-touch-icon.png"
 />
 <meta name="apple-mobile-web-app-title" content="JeanCarloEM" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="manifest" href="https://jcem.pro/logo/site.webmanifest" />
