foot e rodapé estilizados

--- a/_includes/footer/after_footer.html
+++ b/_includes/footer/after_footer.html
@@ -1,9 +1,22 @@
 <div class="sobpostbar">
+	<p>
+		Copyright &copy; 2012 - {{ "now" | date: "%Y" }} JeanCarloEM.
+		Todos os direitos reservados.
+		<span
+			>Feito com
+			<a
+				href="https://mmistakes.github.io/minimal-mistakes/"
+				target="_blank"
+			>
+				Minimal Mistakes</a
+			>.
+		</span>
+	</p>
 	<ul id="menu-topo-2" class="menu">
 		<li
 			class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1871"
 		>
-			<a href="http://jeancarloem.com/">Sobre o Autor</a>
+			<a href="http://jeancarloem.com/">Sobre</a>
 		</li>
 		<li
 			class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1869"
