pequenos ajsutes do footer eincluido tamanho letras e espaçamento.

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -17,7 +17,7 @@
 	</p>
 
 	<p>
-		<b>AVISO DE CONTEÚDO:</b> Este e qualquer site de
+		<b>CONTEÚDO SENSÍVEL:</b> Este e qualquer site de
 		<b>jeancarloem.com</b> e seus subdomínios podem conter
 		<b
 			>informações, opiniões pessoais, sugestões, dicas, orientações,
