remoção de link web.archive

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -5,7 +5,7 @@
 		subdomínio de <b>jeancarloem.com</b>, você concorda, de forma
 		<b>irretratável e irrevogável</b>, com os
 		<a
-			href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/termos-e-condicoes-de-uso"
+			href="https://jeancarloem.com/termos-e-condicoes-de-uso"
 			><b>Termos e Políticas de Uso</b></a
 		>, declarando-se ciente de que, caso <b>não</b> os aceite
 		ou concorde, <b><u>NÃO</u></b> deverá usar, acessar, salvar (ou
@@ -30,7 +30,7 @@
 		quaisquer garantias implícitas e/ou explícitas, diretas e/ou
 		indiretas, nos termos da
 		<a
-			href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/licenca"
+			href="https://jeancarloem.com/licenca"
 			><b>licença</b></a
 		>. Pode conter ainda teor
 		<b>polêmico, religioso, filosófico ou político</b>, entre outros,
@@ -62,7 +62,7 @@
 		>. Tais manifestações são resguardadas pelo
 		<b>direito à livre expressão</b>, garantido pela
 		<a
-			href="https://web.archive.org/web/20230209192120/http://www.senado.leg.br/atividade/const/con1988/con1988_15.12.2016/art_5_.asp"
+			href="http://www.senado.leg.br/atividade/const/con1988/con1988_15.12.2016/art_5_.asp"
 			target="_blank"
 			rel="noopener"
 			><b>Constituição Federal do Brasil</b>, em seu artigo 5º,
@@ -71,7 +71,7 @@
 		<b>liberdade de pensamento, religião e comunicação</b>,
 		independentemente de censura ou licença, bem como pela
 		<a
-			href="https://web.archive.org/web/20230209192120/http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm"
+			href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709.htm"
 			target="_blank"
 			rel="noopener"
 			><b>Lei Geral de Proteção de Dados Pessoais</b>, artigo 2º,
@@ -84,7 +84,7 @@
 		acessar, usar, compartilhar, distribuir ou permanecer neste site
 		sem antes concordar com <b><u>TODOS</u></b> os
 		<a
-			href="https://web.archive.org/web/20230209192120/https://jeancarloem.com/termos-e-condicoes-de-uso"
+			href="https://jeancarloem.com/termos-e-condicoes-de-uso"
 			><b>Termos e Políticas de Uso</b></a
 		>
 		e AVISO DE CONTEÚDO acima!
