footer: modificado nomes e links.

--- a/_includes/footer/after_footer.html
+++ b/_includes/footer/after_footer.html
@@ -21,21 +21,24 @@
 		<li
 			class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1869"
 		>
-			<a href="https://blog.jeancarloem.com/?page_id=19"
-				>Condições de Uso</a
+			<a href="https://jeancarloem.com/?page_id=19">Legal</a>
+		</li>
+		<li
+			class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1875"
+		>
+			<a href="https://jeancarloem.com/avisos-gerais/"
+				>Advertências</a
 			>
 		</li>
 		<li
 			class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1875"
 		>
-			<a href="https://blog.jeancarloem.com/avisos-gerais/"
-				>Avisos Gerais</a
-			>
+			<a href="https://jeancarloem.com/privacidade/">Privacidade</a>
 		</li>
 		<li
 			class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1872"
 		>
-			<a title="Licenca" href="https://blog.jeancarloem.com/licenca/"
+			<a title="Licenca" href="https://jeancarloem.com/licenca/"
 				>Licença</a
 			>
 		</li>
