adicionado cookie banner com silktide; adicionado end_of_line no config; mudado persona-jcem para assets-jcem.

--- a/_includes/footer/after_footer.html
+++ b/_includes/footer/after_footer.html
@@ -21,7 +21,7 @@
 		<li
 			class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1869"
 		>
-			<a href="https://jeancarloem.com/?page_id=19">Legal</a>
+			<a href="https://jeancarloem.com/termos-de-uso">Legal</a>
 		</li>
 		<li
 			class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1875"
