removido algumas palavras site

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -33,7 +33,7 @@
 				id: 'obrigat_rios',
 				name: 'Obrigatórios',
 				description:
-					'<p>Esses cookies são necessários para o funcionamento correto do site e não podem ser desativados. Eles ajudam em funções como fazer login e definir suas preferências de privacidade.</p>',
+					'<p>Esses cookies são necessários para o funcionamento correto da plataforma e não podem ser desativados. Eles ajudam em funções como fazer login e definir suas preferências de privacidade.</p>',
 				required: true,
 				onAccept: function () {
 					console.log('Add logic for the required Obrigatórios here');
@@ -100,7 +100,7 @@
 			preferences: {
 				title: 'Personalize suas preferências de cookies',
 				description:
-					'<p>Respeitamos o seu direito à privacidade. Você pode optar por não permitir alguns tipos de cookies. Suas preferências de cookies serão aplicadas em todo o nosso site (especificamente o domínio e subdomínios atuais).</p><p><b>Exemplos de Cookies Essenciais: </b></p><ul><li><b>Autenticação</b>: Cookies que mantêm o usuário logado enquanto navega entre páginas. Sem eles, o usuário precisaria fazer login em cada nova página.</li><li><b>Carrinho de Compras</b>: Cookies que lembram os itens que o usuário adicionou ao carrinho em um e-commerce. </li><li><b>Segurança</b>: Cookies que ajudam a detectar tentativas de fraude ou ataques de segurança. </li><li><b>Preferências do Usuário</b> (Básicas): Cookies que lembram se o usuário aceitou a política de cookies, ou qual idioma ele selecionou, garantindo que essas escolhas persistam durante a sessão. </li><li><b>Balanceamento de Carga</b>: Cookies que distribuem o tráfego do site entre vários servidores;</li><li><b>Configurações de interface do usuário</b>:&nbsp;Cookies que lembram a preferência de visualização do usuário, como o tamanho da fonte ou o tema da página (claro/escuro), para aquela sessão específica.</li></ul>',
+					'<p>Respeitamos o seu direito à privacidade. Você pode optar por não permitir alguns tipos de cookies. Suas preferências de cookies serão aplicadas em todo o nossa plataforma (se site: especificamente o domínio e subdomínios atuais).</p><p><b>Exemplos de Cookies Essenciais: </b></p><ul><li><b>Autenticação</b>: Cookies que mantêm o usuário logado enquanto navega entre páginas. Sem eles, o usuário precisaria fazer login em cada nova página.</li><li><b>Carrinho de Compras</b>: Cookies que lembram os itens que o usuário adicionou ao carrinho em um e-commerce. </li><li><b>Segurança</b>: Cookies que ajudam a detectar tentativas de fraude ou ataques de segurança. </li><li><b>Preferências do Usuário</b> (Básicas): Cookies que lembram se o usuário aceitou a política de cookies, ou qual idioma ele selecionou, garantindo que essas escolhas persistam durante a sessão. </li><li><b>Balanceamento de Carga</b>: Cookies que distribuem o tráfego de conexões entre vários servidores;</li><li><b>Configurações de interface do usuário</b>:&nbsp;Cookies que lembram a preferência de visualização do usuário, como o tamanho da fonte ou o tema da página (claro/escuro), para aquela sessão específica.</li></ul>',
 				creditLinkText: 'Silktide',
 				creditLinkAccessibleLabel: 'Silktide',
 			},
