mudado para AVISO CONTEÚDO SENSÍVEL

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -17,7 +17,7 @@
 	</p>
 
 	<p>
-		<b>CONTEÚDO SENSÍVEL:</b> Este e qualquer site de
+		<b>AVISO CONTEÚDO SENSÍVEL:</b> Este e qualquer site de
 		<b>jeancarloem.com</b> e seus subdomínios podem conter
 		<b
 			>informações, opiniões pessoais, sugestões, dicas, orientações,
@@ -87,6 +87,6 @@
 			href="https://jeancarloem.com/termos-e-condicoes-de-uso"
 			><b>Termos e Políticas de Uso</b></a
 		>
-		e AVISO DE CONTEÚDO acima!
+		e AVISO DE CONTEÚDO SENSÍVEL acima.
 	</p>
 </div>
