--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -81,7 +81,7 @@
 
 	<p>
 		<b>ATENÇÃO:</b> É expressamente <b><u>PROIBIDO</u></b> visualizar,
-		acessar, usar, compartilhar, distribuir ou permanecer neste site
+		acessar, armazenar, usar, compartilhar, distribuir ou permanecer neste site
 		sem antes concordar com <b><u>TODOS</u></b> os
 		<a
 			href="https://jeancarloem.com/termos-e-condicoes-de-uso"
