organização sob a pasta script, e jcem dentro de assets

--- a/assets/jcem/css/jcmain.scss
+++ b/assets/jcem/css/jcmain.scss
@@ -246,4 +246,4 @@ footer ul.social-icons li i {
 	margin: 0 0.1em;
 }
 
-@import '../cookie-banner/_silktide-consent-manager.scss';
+@import '../cookie-banner/silktide-consent-manager';
